<resources>
    <string name="app_name"></string>
    <string name="TAG">MainActivity</string>
    <string name="on_data_available">onDataAvailable - %1$s</string>
    <string name="on_error">onError - %1$s</string>
    <string name="base_url">http://ws.audioscrobbler.com/2.0/</string>
    <string name="method">artist.gettopalbums</string>
    <string name="api_key">58384a2141a4b9737eacb9d0989b8a8c</string>
    <string name="format">json</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="textView">Please wait...</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for settings fragments-->
    <string name="general">General</string>
    <string name="personal_info">Personal Information</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="ff">Following and Followers</string>

    <!-- Strings used for playlist -->
    <string name="playlist_name">Name</string>
    <string name="playlist_category">Category</string>
    <string name="playlist_description">Description</string>
    <string name="playlist_date">Date</string>

    <string name="playlist_add_header">Add New Playlist</string>
    <string name="playlist_name_add">Enter playlist name</string>
    <string name="playlist_category_add">Enter playlist category</string>
    <string name="playlist_description_add">Enter playlist description</string>
    <string name="btn_add">Add</string>
    <string name="btn_close">Close</string>
    <string name="playlist_update_header">Update Playlist</string>
    <string name="playlist_name_update">Update playlist name</string>
    <string name="playlist_category_update">Update playlist category</string>
    <string name="playlist_description_update">Update playlist description</string>
    <string name="btn_update">Update</string>
    <string name="menu_btn_update">Update</string>
    <string name="menu_btn_delete">Delete</string>
    <string name="delete_playlist">Are you sure you want to delete this playlist item?</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_custom_progress_bar">CustomProgressBar</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_custom_alert_dialog">CustomAlertDialog</string>
    <string name="builder_about_us_message">
        last.fm is a music service that learns what you love. Create your own
        profile, track what you listen to (we call this scrobbling) and get cool stuff like your own
        music charts, new music recommendations, and a big ol community of other music lovers.
    </string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="maps">Maps</string>
    <string name="rating_dialog_title">Rate this app</string>
    <string name="rate_info">If you enjoy using this app, would you take a minute to rate this app?</string>
    <string name="google_maps_key">AIzaSyBOm2SY3mY9Awm8qmxoIMWT236M3bGZB8k</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
